# exa

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: bootstrap.cmake
libkodik/: CMakeLists.txt  config.h.in  kodik.c  kodik.h
libkodik/core/util/: altspell.h  macro.h  string.c  string.h
libkodik/data/: country.c  country.h  genre.c  genre.h  quality.c  quality.h  translation.c  translation.h  translation2.c  translation2.h  year.c  year.h
tests/: CMakeLists.txt
tests/libkodik/: CMakeLists.txt
tests/libkodik/data/: CMakeLists.txt  all.h  country.c  genre.c  load_data.c  quality.c  translation.c  translation2.c  year.c
tests/libkodik/data/input/: country_data.json  genre_data.json  quality_data.json  translation2_data.json  translation_data.json  year_data.json
